Fix multiple scrollbars issue

--- a/src/dotnet/APIView/APIViewWeb/Client/css/usageSample.scss
+++ b/src/dotnet/APIView/APIViewWeb/Client/css/usageSample.scss
@@ -1,8 +1,3 @@
-﻿.usage-sample {
-    padding: 4px;
-    margin: 10px;
-}
-
 .usage-sample + .border + .rounded {
     margin-top: 15px !important;
 }
